# aws-iot-device-client

./: .clang-format  .dockerignore  .gitignore  .version  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.awssdk  CMakeLists.txt.gtest  CMakeLists.txt.versioning  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  Toolchain-rpi3-armhf.cmake  config-template.json  coverity-build.sh  dc-settings.json  docker-build.sh  format-check.sh  run-build.sh  run-cppcheck.sh  run-install.sh  setup.ps1  setup.sh  sonar-project.properties  workshop-setup.sh
.github/: build.sh  build_st_component.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/docker-images/: Dockerfile  README.md  entry-script.sh
.github/workflows/: approval.yml  base-images.yml  build-fork.yml  build.yml  ci.yml  coverity.yml  cppcheck-fork.yml  cppcheck.yml  docker-builds.yml  docker-main-builds.yml  docker-pre-release-builds.yml  doxygen.yml  e2e-ci-fork.yml  e2e-ci.yml  lint-fork.yml  lint.yml  notification.yml  pre-release-ci.yml  release-ci.yml  sonarcloud.yml
cmake-toolchain/: README.md  Toolchain-aarch64.cmake  Toolchain-armhf.cmake  Toolchain-mips.cmake  Toolchain-ppc64le.cmake  valgrind-suppressions.txt
deprecated-job-docs-and-handlers/deprecated-job-handlers/: remove-packages.sh
docs/: COMPILATION.md  CONFIG.md  Doxyfile  ENV.md  HTTP_PROXY.md  PERMISSIONS.md  README.md  SETUP.md  VERSION.md  _client_base_notification_8h_source.html  _client_base_notifier_8h_source.html  _config_8h_source.html  _config_shadow_8h_source.html  _device_defender_feature_8h_source.html  _env_utils_8h_source.html  _ephemeral_promise_8h_source.html  _feature_8h_source.html  _feature_registry_8h_source.html  _file_logger_8h_source.html  _file_utils_8h_source.html  _fleet_provisioning_8h_source.html  _heartbeat_task_8h_source.html  _iot_jobs_client_wrapper_8h_source.html  _iot_secure_tunneling_client_wrapper_8h_source.html  _job_document_8h_source.html  _job_engine_8h_source.html  _jobs_feature_8h_source.html  _limited_stream_buffer_8h_source.html  _lock_file_8h_source.html  _log_level_8h_source.html  _log_message_8h_source.html  _log_queue_8h_source.html  _logger_8h_source.html  _logger_factory_8h_source.html  _mqtt_utils_8h_source.html  _proxy_utils_8h_source.html  _pub_sub_feature_8h_source.html  _report_task_wrapper_8h_source.html  _retry_8h_source.html  _sample_shadow_feature_8h_source.html  (+237 more)
docs/latex/: annotated.tex  class_aws_1_1_iot_1_1_device_client_1_1_client_base_notifier.eps  class_aws_1_1_iot_1_1_device_client_1_1_client_base_notifier.tex  class_aws_1_1_iot_1_1_device_client_1_1_config.tex  class_aws_1_1_iot_1_1_device_client_1_1_default_client_base_notifier.eps  class_aws_1_1_iot_1_1_device_client_1_1_default_client_base_notifier.tex  class_aws_1_1_iot_1_1_device_client_1_1_device_defender_1_1_device_defender_feature.eps  class_aws_1_1_iot_1_1_device_client_1_1_device_defender_1_1_device_defender_feature.tex  class_aws_1_1_iot_1_1_device_client_1_1_feature.eps  class_aws_1_1_iot_1_1_device_client_1_1_feature.tex  class_aws_1_1_iot_1_1_device_client_1_1_fleet_provisioning_n_s_1_1_fleet_provisioning.tex  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_ephemeral_promise.eps  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_ephemeral_promise.tex  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_job_engine.tex  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_jobs_feature.eps  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_jobs_feature.tex  class_aws_1_1_iot_1_1_device_client_1_1_jobs_1_1_limited_stream_buffer.tex  class_aws_1_1_iot_1_1_device_client_1_1_loadable_from_json_and_cli_and_environment.eps  class_aws_1_1_iot_1_1_device_client_1_1_loadable_from_json_and_cli_and_environment.tex  class_aws_1_1_iot_1_1_device_client_1_1_logging_1_1_file_logger.eps  class_aws_1_1_iot_1_1_device_client_1_1_logging_1_1_file_logger.tex  hierarchy.tex  refman.tex  (+32 more)
integration-tests/: CMakeLists.txt  CMakeLists.txt.gtest  CMakeLists.txt.libawscpp  README.md  entry-point.sh
integration-tests/source/: GTestMain.cpp  IntegrationTestResourceHandler.cpp  IntegrationTestResourceHandler.h  TestBase.cpp  TestBase.h
integration-tests/source/devicedefender/: DeviceDefenderIntegrationTests.cpp
integration-tests/source/fleetprovisioning/: FleetProvisioningIntegrationTests.cpp
integration-tests/source/jobs/: JobsIntegrationTests.cpp
integration-tests/source/tunneling/: SecureTunnelingIntegrationTests.cpp  test-tunnel.sh
sample-job-docs/: download-file.json  echo.json  install-packages.json  reboot.json  remove-packages.json  run-shellcommand.json
sample-job-handlers/: download-file.sh  health-check.sh  install-packages.sh  reboot.sh  remove-packages.sh  restart-services.sh  shell-command-handler.sh  shutdown.sh  start-services.sh  stop-services.sh  verify-packages-installed.sh  verify-packages-removed.sh
setup/: appspec.yml  aws-iot-device-client.service  device-client.service
source/: ClientBaseNotification.h  ClientBaseNotifier.h  Feature.h  FeatureRegistry.cpp  FeatureRegistry.h  SharedCrtResourceManager.cpp  SharedCrtResourceManager.h  Version.h.in  main.cpp
static-checks/: coverity-build.sh  report-coverage.sh  run-cppcheck.sh
test/: CMakeLists.txt  GTestMain.cpp  TestStringUtils.cpp
test/config/: TestConfig.cpp  TestConfigSerialization.cpp
test/devicedefender/: TestDeviceDefender.cpp
test/fleetprovisioning/: TestFleetProvisioning.cpp
test/jobs/: TestEphemeralPromise.cpp  TestJobDocument.cpp  TestJobEngine.cpp  TestJobsFeature.cpp  TestLimitedStreamBuffer.cpp
test/logging/: TestLogQueue.cpp  TestLogging.cpp
test/sensor-publish/: TestHeartbeatTask.cpp  TestSensor.cpp  TestSensorPublishFeature.cpp
test/shadow/: TestConfigShadowFeature.cpp  TestSampleShadowFeature.cpp
test/tunneling/: TestSecureTunnelContext.cpp  TestSecureTunnelingFeature.cpp
test/util/: TestEnvUtils.cpp  TestFeatureRegistry.cpp  TestFileUtils.cpp  TestLockFile.cpp  TestLockFileUtils.cpp  TestMqttUtils.cpp  TestProxyUtils.cpp  TestSharedResourceManager.cpp  TestStringUtils.cpp  TestUniqueString.cpp
(+256 files in other folders)
